deployment/k8s-deployment/elasticsearch.yaml
# ElasticSearch
apiVersion: v1
kind: List
items:
- apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    name: elasticsearch
    labels:
      app: elasticsearch
      app.kubernetes.io/name: elasticsearch
      app.kubernetes.io/component: storage-backend
      app.kubernetes.io/part-of: jaeger
  spec:
    serviceName: elasticsearch
    replicas: 1
    selector:
      matchLabels:
        app: elasticsearch
    template:
      metadata:
        labels:
          app: elasticsearch
          app.kubernetes.io/name: elasticsearch
          app.kubernetes.io/component: storage-backend
          app.kubernetes.io/part-of: jaeger
      spec:
        containers:
          - name: elasticsearch
            image: docker.elastic.co/elasticsearch/elasticsearch:5.6.0
            imagePullPolicy: IfNotPresent
            command:
              - bin/elasticsearch
            args:
              - "-Ehttp.host=0.0.0.0"
              - "-Etransport.host=127.0.0.1"
            volumeMounts:
              - name: data
                mountPath: /data
            readinessProbe:
              exec:
                command:
                - curl
                - --fail
                - --silent
                - --output
                - /dev/null
                - --user
                - elastic:changeme
                - localhost:9200
              initialDelaySeconds: 5
              periodSeconds: 5
              timeoutSeconds: 4
        volumes:
          - name: data
            emptyDir: {}
- apiVersion: v1
  kind: Service
  metadata:
    name: elasticsearch
    labels:
      app: elasticsearch
      app.kubernetes.io/name: elasticsearch
      app.kubernetes.io/component: storage-backend
      app.kubernetes.io/part-of: jaeger
  spec:
    type: NodePort
    selector:
      app.kubernetes.io/name: elasticsearch
      app.kubernetes.io/component: storage-backend
      app.kubernetes.io/part-of: jaeger
    ports:
    - port: 9200
      name: elasticsearch
    - port: 9300
      name: transport
