deployment/k8s-deployment/ts-deployment-part3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-ui-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ts-ui-dashboard
  template:
    metadata:
      labels:
        app: ts-ui-dashboard
    spec:
      containers:
      - name: ts-ui-dashboard
        image: codewisdom/ts-ui-dashboard
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ts-ui-dashboard
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      nodePort: 32677
  selector:
   app: ts-ui-dashboard
